--- a/code(JS)/03_运算符/06_关系运算符.html
+++ b/code(JS)/03_运算符/06_关系运算符.html
@@ -6,21 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script type="text/javascript">
-        var a = true;
-        console.log(!a);
-
-        var result = false&&true;
-        console.log(result);
-
-        var result1 = false||true;
-        console.log(result1);
-
-        var result3 = NaN&&0;
-        console.log(result3);
-
-        var result2 = 0||NaN;
-        console.log(result2);
-
+        console.log(1 >= true);
+        console.log(1 >  "0");
+        console.log(1 > NaN);
+        console.log(10 > null);
+        console.log("11" < "5");
+        console.log("abc" < "bcd");
     </script>
 </head>
 <body>
