--- a/code(JS)/05_对象/18_构造函数.html
+++ b/code(JS)/05_对象/18_构造函数.html
@@ -6,18 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script type="text/javascript">
-        // 使用函数声明形式创建的函数函数声明提前
-        fun();
-        function fun(){
-            console.log("ok");
-        }
 
-        // 使用函数表达式创建的函数不能在创建前调用
-        fun2();
-        var fun2 = function(){
-            console.log("test");
+        function Person(name,age){
+            this.name = name;
+            this.age = age;
         }
-        
+        var obj = new Person("swk",18);
+
+        console.log(obj);
+
+        console.log(obj instanceof Person);
     </script>
 </head>
 <body>
