--- a/code(JS)/exercise/07_dom查询.html
+++ b/code(JS)/exercise/07_dom查询.html
@@ -6,8 +6,17 @@
 		<link rel="stylesheet" type="text/css" href="style/css.css" />
 		<script type="text/javascript">
 			
+			//定义一个函数，朱门用来为指定元素绑定单击响应函数 
+			// 参数一：idStr 要绑定单击响应函数的对象的id值
+			// 参数二：事件的回调函数，当当单击元素时，该函数将会被处罚
+			function myClick(idStr,fun){
+				var btn = document.getElementById(idStr);
+				btn.onclick = fun;
+			}
+
+
 			window.onload = function(){
-				// 查找#bj节点
+			// 查找#bj节点
 				// 为id为btn01的按钮绑定一个单击响应函数
 				var btn01 = document.getElementById("btn01");
 				btn01.onclick = function(){
@@ -16,7 +25,7 @@
 					alert(bj.innerHTML);
 				};
 
-				// 查找所有li节点
+			// 查找所有li节点
 				var btn02 = document.getElementById("btn02");
 				btn02.onclick = function(){
 					// 查找所有li节点
@@ -28,6 +37,7 @@
 					}
 				};
 
+			// 查找name=gender的所有节点
 				var btn03 = document.getElementById("btn03");
 				btn03.onclick = function(){
 					var inputs = document.getElementsByName("gender");
@@ -38,22 +48,75 @@
 						alert(inputs[i].value);
 					}
 				};
-			}
 
-
-
-			
-			
-			// 查找name=gender的所有节点
 			// 查找#city下所有li节点
+				var btn04 = document.getElementById("btn04");
+				btn04.onclick = function(){
+					var city = document.getElementById("city");
+					var lis = city.getElementsByTagName("li");
+					for(var i=0;i < lis.length;i++){
+						alert(lis[i].innerHTML);
+					}
+				};
+
 			// 返回#city的所有子节点
+				var btn05 = document.getElementById("btn05");
+				btn05.onclick = function(){
+					var city = document.getElementById("city");
+					// var cns = city.childNodes;
+					// alert(cns.length);
+
+					var cns2 = city.children;
+					alert(cns2.length);
+				};
+
 			// 返回#phone的第一个子节点
+				var btn06 = document.getElementById("btn06");
+				btn06.onclick = function(){
+					var phone = document.getElementById("phone");
+					var fir = phone.firstChild;
+					// var firs = phone.firstElementChild;
+					alert(fir.innerHTML);
+				};
+
 			// 返回#bj的父节点
+				myClick("btn07",function(){
+					var bj = document.getElementById("bj");
+
+					var pn = bj.parentNode;
+
+					alert(pn.innerText);
+				});
+
 			// 返回#android的前一个兄弟节点
+				myClick("btn08",function(){
+					var and = document.getElementById("android");
+
+					var ps = and.previousSibling;
+
+					var ps1 = and.previousElementSibling;
+					alert(ps1.innerHTML);
+				});
+
 			// 返回#username的value属性值
+				myClick("btn09",function(){
+					var um = document.getElementById("username");
+					alert(um.value);
+				});
+
 			// 设置#username的value属性值
+				myClick("btn10",function(){
+					var um = document.getElementById("username");
+					um.value = "今天天气真不错";
+				});
+
 			// 返回#bj的文本值
-		
+				myClick("btn11",function(){
+					var bj = document.getElementById("bj");
+					alert(bj.innerHTML);
+				});
+
+			}
 		</script>
 	</head>
 	<body>
