--- a/code(JS)/exercise/16_定时器应用3.html
+++ b/code(JS)/exercise/16_定时器应用3.html
@@ -28,6 +28,7 @@
         }
     </style>
 
+    <script src="./js/tools.js"></script>
     <script>
         window.onload = function () {
 
@@ -36,12 +37,12 @@
 
             // box1向右移
             btn01.onclick = function () {
-                move(box1,800,10);
+                move(box1,"left",800,10);
             };
 
             // box1向左移
             btn02.onclick = function () {
-                move(box1,0,10);
+                move(box1,"left",0,10);
             };
 
 
@@ -50,71 +51,27 @@
 
             // box2向右移
             btn03.onclick = function () {
-                move(box2,800,10);
+                move(box2,"left",800,10);
             };
 
             // box2向左移
             btn04.onclick = function () {
-                move(box2,0,10);
+                move(box2,"left",0,10);
             };
 
             var btn05 = document.getElementById("btn05");
             btn05.onclick = function () {
-                move(box2,800,10);
+                move(box2,"width",800,10,function(){
+                    move(box2,"height",400,10,function(){
+                        move(box2,"width",100,10,function(){
+                            move(box2,"height",100,10,function(){
+
+                            });
+                        });
+                    });
+                });
             };
         };
-
-
-        // 创建一个可以执行简单动画的函数
-        // obj 要执行动画的对象
-        // target 执行动画的目标位置
-        // speed 移动的速度
-        var timer;
-        function move(obj,target,speed) {
-
-            clearInterval(timer);
-            // 当前位置
-            var current = parseInt(getStyle(obj, "left"));
-
-            if(current > target){
-                speed = -speed;
-            }
-
-            // 向执行动画的对象中添加一个timer属性，用来保存它自己的定时器标识
-            obj.timer = setInterval(function () {
-                var oldValue = parseInt(getStyle(obj, "left"));
-
-                var newValue = oldValue + speed;
-
-                obj.style.left = newValue + "px";
-
-                if ((speed < 0 && newValue < target) || (speed > 0 && newValue > target)) {
-                    newValue = target;
-                }
-
-                if (newValue === target) {
-                    clearInterval(obj.timer);
-                }
-            }, 30);
-        }
-
-
-
-        function getStyle(obj, name) {
-
-            // 加window表示getComputedStyle是一个属性，不加是变量
-            // 变量如果寻找不到会报错，属性寻找不到会返回false
-            if (window.getComputedStyle) {
-                // 正常浏览器
-                return getComputedStyle(obj, null)[name];
-            } else {
-                // IE8
-                return obj.currentStyle[name];
-            }
-
-
-
-        }
     </script>
 </head>
 
