--- a/code(JS Advance)/01_基础总结深入/02_数据_变量_内存2.html
+++ b/code(JS Advance)/01_基础总结深入/02_数据_变量_内存2.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-        var obj = {name:'TOM'};
-        var a = obj;
-        console.log(typeof a);
+        var a = 3;
+
+	    var a = function(){};
+        
+	    var a = {};
+        var b = a;
     </script>
 </head>
 <body>
