--- a/code(ES6)/es5/15.函数调用方式.html
+++ b/code(ES6)/es5/15.函数调用方式.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button>点击</button>
     <script>
         // 1. 普通函数
         function fn(){
@@ -28,6 +29,7 @@
         new Star();
 
         // 4. 绑定事件函数
+        var btn = document.querySelector('button');
         btn.onclick = function(){}; // 点击按钮调用
 
         // 5. 定时器函数
